# Vaeloom

./: .cspell.json  .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  .prettierignore  .prettierrc  .vale.ini  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  CONTRIBUTING.md  IMPLEMENTATION-CHECKLIST.md  LICENSE  MAINTAINERS.md  Makefile  SECURITY.md  docker-compose.yml  fix_encoding.py  fix_mermaid.py  jest.config.ts  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  security-audit.config.js  tsconfig.base.json  update_taglines.py
apps/ai-service/: .env.example  Dockerfile  pyproject.toml
apps/ai-service/src/app/: config.py  database.py  dependencies.py  logging.py  main.py
apps/ai-service/src/app/agents/: README.md
apps/ai-service/src/app/clients/: __init__.py  calendar_client.py  gmail_client.py  job_board_client.py
apps/ai-service/src/app/ingestion/: dedup.py  parsers.py  pipeline.py
apps/ai-service/src/app/middleware/: auth.py  rate_limit.py
apps/ai-service/src/app/models/: __init__.py  agent.py  execution.py  memory.py  schema.py
apps/ai-service/src/app/orchestrator/: README.md  base.py  loop.py  router.py  state.py
apps/ai-service/src/app/routers/: agents.py  embeddings.py  health.py  memory.py
apps/ai-service/tests/: test_application_agent.py  test_ats_agent.py  test_gmail_agent.py  test_ingestion.py  test_job_search_agent.py  test_memory.py  test_memory_agent_handler.py  test_orchestrator.py  test_organization_agent.py  test_pdf_parser.py  test_qa_agent.py  test_resume_agent.py  test_scheduler_agent.py
(+1138 files in other folders)
