[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaeloom-ai-service"
version = "0.1.0"
description = "Vaeloom AI Service - Memory, Agents, Knowledge Graph, RAG"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "anthropic>=0.34.0",
    "openai>=1.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "numpy>=1.26.0",
    "tenacity>=8.3.0",
    "pyjwt>=2.8.0",
    "alembic>=1.13.0",
    "vaeloom-python-common>=0.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "opentelemetry-distro>=0.45b0",
    "opentelemetry-exporter-otlp>=0.45b0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[tool.setuptools.packages.find]
where = ["src"]
